<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/ConfirmCredentialText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="100dp"
        android:fontFamily="sans-serif-condensed"
        android:lineSpacingExtra="6sp"
        android:lines="3"
        android:text="@string/ConfirmCodeSent"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_textConfirmCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/mainColor"
        android:fontFamily="sans-serif-condensed"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLength="10"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ConfirmCredentialText"
        tools:ignore="SpeakableTextPresentCheck">

    </EditText>

    <TextView
        android:id="@+id/tv_repeatSendCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:fontFamily="sans-serif-condensed"
        android:lineSpacingExtra="6sp"
        android:padding="4dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_textConfirmCode"
        tools:text="Resend confirmation code in: 0:45" />

    <Button
        android:id="@+id/btn_SendConfirmCode"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:background="@drawable/rounded_button_shape"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/Confirm"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_repeatSendCode">

    </Button>

    <TextView
        android:id="@+id/tv_wrongCodeError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:fontFamily="sans-serif"
        android:lineSpacingExtra="6sp"
        android:padding="4dp"
        android:text="@string/INVALID_CODE"
        android:textColor="@color/mainColor"
        android:textSize="16sp"
        android:textStyle="normal"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_repeatSendCode"
        />

    <TextView
        android:id="@+id/tv_resendCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:fontFamily="sans-serif"
        android:lineSpacingExtra="6sp"
        android:padding="4dp"
        android:text="@string/RESEND_CODE"
        android:textColor="@color/mainColor"
        android:textSize="14sp"
        android:textStyle="normal"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_repeatSendCode"
        />
</androidx.constraintlayout.widget.ConstraintLayout>